syntax = "proto3";

package envoy.extensions.quic.connection_debug_visitor.v3;

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.quic.connection_debug_visitor.v3";
option java_outer_classname = "ConnectionDebugVisitorBasicProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/quic/connection_debug_visitor/v3;connection_debug_visitorv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: QUIC connection debug visitor basic config]
// [#extension: envoy.quic.connection_debug_visitor.basic]

// Configuration for a basic QUIC connection debug visitor.
message BasicConfig {
}
